<resources>
    <string name="app_name">Muestreo Cohorte</string>
    <string name="main_header">Muestreo Estudio de Cohorte</string>
    <string name="desc_logo">Instituto de Ciencias Sostenibles</string>
    <string name="desc_barcode">Escanear código de barras</string>
    <string name="error">Ha ocurrido un error!</string>
    <string name="code_error">Este código es inválido!</string>
    <string name="code_notfound">Código no encontrado!</string>
    <string name="scan_error">Esta lectura es inválida!</string>
    <string name="back">Regresar</string>
    <string name="home">Inicio</string>
    <string name="loading">Por favor espere..</string>
    <string name="exit">Salir</string>
    <string name="exiting">Realmente desea Salir?</string>
    <string name="confirm">Confirmar</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="success">El proceso ha sido exitoso</string>
    <string name="err_not_completed">No ha completado el formulario</string>
    <string name="err_cancel">Ha cancelado el proceso!</string>
    <string name="no_items">No hay registros!</string>
    <string name="search_hint">Ingresar texto de búsqueda</string>
    <string name="download">Descargar</string>
    <string name="download_user">Usuarios</string>
    <string name="download_par">Participante</string>
    <string name="downloading">Descargar toda la info del servidor?</string>
    <string name="data_not_sent">Hay datos sin enviar en el equipo, estos datos se borrarán si continúa. Aún desea descargar la información del servidor?</string>
    <string name="upload">Subir datos</string>
    <string name="upload_docs">Subir documentos</string>
    <string name="upload_yes">Subir datos al servidor?</string>
    <string name="uploading">Enviar toda la info al servidor?</string>
    <string name="uploading_docs">Enviar todos los documentos al servidor?</string>
    <string name="update_cat">Actualizando datos en el equipo..</string>
    <string name="storage_error">Medio de almacenamiento no disponible!</string>
    <string name="barcode_error">Escaner de código de barras no disponible</string>
    <string name="perm_error">No tiene permiso en esta opción!</string>
    <string name="e_error">Esta indicado no entrar información. Es posible que ya se hizo el registro por favor verifique.</string>
    <string name="retired_error">El participante está retirado. Anote el código para reportar al supervisor en caso de ser necesario.</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="edit">Editar</string>
    <string name="add">Agregar</string>
    <string name="is_null">(Nulo)</string>
    <string name="main_info">Buscar Participante</string>
    <string name="main_recepcion">Recepción</string>
    <string name="main_report">Revisar Datos</string>
    <string name="main_super">Supervisor</string>
    <string name="main_mapa">Ver Mapa</string>
    <string name="main_survey">Encuesta Satisfacción</string>
    <string name="info_casa">Casa</string>
    <string name="info_participante">Participante</string>
    <string name="info_codscasa">Códigos en Casa</string>
    <string name="info_survey1">Encuesta de participante</string>
    <string name="info_survey2">Encuesta de casa</string>
    <string name="info_survey3">Encuesta de lactancia</string>
    <string name="info_weight">Peso y talla</string>
    <string name="info_sample">Muestras</string>
    <string name="info_gift">Obsequios</string>
    <string name="info_zika">Consentimiento Zika</string>
    <string name="info_vacc">Vacunas</string>
    <string name="info_visit">Visitas</string>
    <string name="info_recon">Consentimiento Dengue</string>
    <string name="info_conschik">Consentimiento Chikv</string>
    <string name="info_chgest">Cambio de estudio</string>
    <string name="info_reconflu">Consentimiento Influenza</string>
    <string name="datos_parto">Datos Parto BB</string>
     <string name="datos_casa">Datos de Casa en Visita</string>
    <string name="info_docs">Documentos</string>
    <string name="code">Código</string>
    <string name="selec_part">Seleccionar participante</string>
    <string name="enter_code">Ingresar código</string>
    <string name="enter_name">Ingresar nombre</string>
    <string name="enter_lastname">Ingresar apellido</string>
    <string name="add_part">Agregar participante</string>
    <string name="quitar_part">Quitar de esta vivienda</string>
    <string name="verify_ec">Agregar encuesta de casa a este participante? </string>
    <string name="verify_ep">Agregar encuesta de participante? </string>
    <string name="verify_el">Agregar encuesta de lactancia materna? </string>
    <string name="verify_pt">Agregar peso y talla? </string>
    <string name="verify_sm">Agregar muestra? </string>
    <string name="verify_gt">Entregar obsequio? </string>
    <string name="verify_vc">Registrar vacunas? </string>
    <string name="verify_vt">Registrar visita? </string>
    <string name="verify_rc">Registrar Consentimiento de Dengue? </string>
    <string name="verify_cz">Registrar Consentimiento de Zika? </string>
    <string name="verify_cc">Registrar Consentimiento de ChikV? </string>
    <string name="verify_ce">Registrar Cambio de Estudio? </string>
    <string name="verify_es">Agregar encuesta de satisfacción? </string>
    <string name="verify_dp">Agregar datos de parto de BB? </string>
    <string name="verify_rcflu">Registrar Consentimiento de Influenza? </string>
    <string name="begin_sample">Iniciar toma de muestra</string>
    <string name="begin_gift">Iniciar entrega de obsequio</string>
    <string name="begin_visit">Iniciar visita en la casa</string>
    <string name="house_survey_missing">Realizar encuesta de casa</string>
    <string name="part_survey_missing">Realizar encuesta de participante</string>
    <string name="maternal_survey_missing">Realizar encuesta de lactancia</string>
    <string name="weigth_heigth_missing">Realizar peso y talla</string>
    <string name="sample_missing">Tomar muestra</string>
    <string name="sample_bhc_missing">Tomar muestra para BHC</string>
    <string name="sample_sero_missing">Tomar muestra tubo Rojo</string>
    <string name="gift_missing">Entregar obsequio</string>
    <string name="vaccines_missing">Registrar vacunas</string>
    <string name="visitas_missing">No tiene visitas</string>
    <string name="recons_missing">Realizar consentimiento Dengue</string>
    <string name="zika_missing">Realizar consentimiento Zika</string>
    <string name="cons_missing_chik">Realizar consentimiento de Chikungunya</string>
    <string name="cest_missing">Realizar cambio de estudio</string>
    <string name="sample_pbmc_missing">Tomar muestra PBMC</string>
    <string name="sample_paxgene_missing">Tomar muestra Paxgene</string>
    <string name="retoma">Es retoma de muestra, volumen requerido</string>
    <string name="confirm_pendiente">Hay datos pendientes, confirma que desea salir?</string>
    <string name="convless14">Convalesciente con menos de 14 días. No tomar muestra</string>
    <string name="convmore14">Tomar muestra de convalesciente.</string>
    <string name="reconsflu_missing">Realizar Reconsentimiento Influenza</string>
    <string name="consflu_missing">Realizar Consentimiento Influenza</string>
    <string name="consden_missing">Realizar Consentimiento Dengue</string>
    <string name="parto_missing">Realizar Datos Parto BB</string>
    <string name="barcode_code">Escanee el Código de Barras</string>
    <string name="header_bhc">Recepción BHC</string>
    <string name="pax">Paxgene?</string>
    <string name="volumen">Volumen</string>
    <string name="lugar">Lugar de toma de muestra</string>
    <string name="obs">Observaciones</string>
    <string name="guardar">Guardar</string>
    <string name="terminar">Finalizar</string>
    <string name="list">Listar registros</string>
    <string name="send">Enviar</string>
    <string name="error_volumen">Volumen inválido</string>
    <string name="error_codigo">Código inválido</string>
    <string name="error_lugar">Seleccione lugar donde se tomó la muestra</string>
    <string name="error_temp">Temperatura inválida</string>
    <string name="error_recurso">Recurso inválido</string>
    <string name="error_pin">Número de pinchazos inválido</string>
    <string name="header_red">Recepción Serología</string>
    <string name="header_pbmc">Temperatura PBMC</string>
    <string name="temp_pbmc">Temperatura (ambiente)</string>
    <string name="header_rojo">Temperatura Rojos y BHC</string>
    <string name="temp_rojo">Temperatura (refrigerados)</string>
    <string name="lugar_temp">Lugar dónde toma la temperatura</string>
    <string name="header_pin">Pinchazos Autorizados</string>
    <string name="num_pin">Número de pinchazos</string>
    <string name="header_rnd">Por favor ingrese porque razón no ingreso la información debida.</string>
    <string name="orazon">Otra razón..</string>
    <string name="error_rnd">Ingreso no válido..</string>
    <string name="gpstitle">Configuración GPS</string>
    <string name="gpsquestion">El GPS no está habilitado. Quiere ir al menú de configuración y activarlo?</string>
    <string name="capture">Capturar posición</string>
    <string name="zika_cluster">Estudio Cluster de Zika</string>
    <string name="zika_nuevo_tam">Nuevo Caso Indice</string>
    <string name="zika_indices">Buscar Caso Indice</string>
    <string name="zika_casas">Buscar Casa</string>
    <string name="zika_act_telefono">Actualizar Datos</string>
    <string name="zika_act_servidor">Enviar Datos</string>
    <string name="zika_miembros">Miembros cluster</string>
    <string name="zika_sint">Sintomas iniciales</string>
    <string name="zika_followup">Seguimiento</string>
    <string name="zika_encuesta_ind">Encuesta</string>
    <string name="zika_datos_tam">Datos tamizaje</string>
    <string name="zika_datos_part">Datos participante</string>
    <string name="zika_datos_casa">Datos casa</string>
    <string name="zika_d1">Día 1</string>
    <string name="zika_d2">Día 2</string>
    <string name="zika_d3">Día 3</string>
    <string name="zika_d4">Día 4</string>
    <string name="zika_d5">Día 5</string>
    <string name="zika_d6">Día 6</string>
    <string name="zika_d7">Día 7</string>
    <string name="zika_d8">Día 8</string>
    <string name="zika_d9">Día 9</string>
    <string name="zika_d10">Día 10</string>
    <string name="zika_d11">Día 11</string>
    <string name="zika_d12">Día 12</string>
    <string name="zika_d13">Día 13</string>
    <string name="zika_d14">Día 14</string>
    <string name="zika_d15">Día 15</string>
    <string name="zika_d16">Día 16</string>
    <string name="zika_d17">Día 17</string>
    <string name="zika_d18">Día 18</string>
    <string name="zika_d19">Día 19</string>
    <string name="zika_d20">Día 20</string>
    <string name="zika_d21">Día 21</string>
    <string name="zika_d22">Día 22</string>
    <string name="zika_d23">Día 23</string>
    <string name="zika_d24">Día 24</string>
    <string name="zika_d25">Día 25</string>
    <string name="zika_d26">Día 26</string>
    <string name="zika_d27">Día 27</string>
    <string name="zika_d28">Día 28</string>
    <string name="verify_nz">Agregar caso índice de cluster de Zika?</string>
    <string name="verify_mh">Agregar nuevo miembro de cluster?</string>
    <string name="verify_coh">Este caso índice es de la cohorte?</string>
    <string name="title_activity_vacuna">VacunaActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello World!</string>
    <string name="btnIntend">Tomar foto</string>
    <string name="btnSave">Guardar</string>
    <string name="btnExit">Salir</string>
    <string name="cannot">No puede</string>
    <string name="tipoDoc">Tipo de Documento</string>
</resources>