<menu xmlns:android="http://schemas.android.com/apk/res/android" >

   
    <item android:id="@+id/MENU_HOME" 
        android:title="@string/home" 
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_home"></item>
    
    <item android:id="@+id/MENU_BACK" 
        android:title="@string/back" 
        android:showAsAction="always|withText"
        android:icon="@drawable/ic_menu_revert"></item>
    
    <item android:id="@+id/MENU_ADD" 
        android:title="@string/add" 
        android:showAsAction="always|withText"
        android:icon="@drawable/ic_menu_add">
        <menu>
            <item android:id="@+id/MENU_VISIT" android:title="@string/info_visit"/>
            <item android:id="@+id/SAMPLE" android:title="@string/info_sample"/>
            <item android:id="@+id/SURVEY2" android:title="@string/info_survey2"/>
            <item android:id="@+id/SURVEY1" android:title="@string/info_survey1"/>
            <item android:id="@+id/RECONSFLU" android:title="@string/info_reconflu"/>
            <item android:id="@+id/RECONS" android:title="@string/info_recon"/>
            <item android:id="@+id/ZIKA" android:title="@string/info_zika"/>
            <item android:id="@+id/SURVEY3" android:title="@string/info_survey3"/>
            <item android:id="@+id/WEIGHT" android:title="@string/info_weight"/>
			<item android:id="@+id/PARTO" android:title="@string/datos_parto"/>
			<item android:id="@+id/DAT_CASA" android:title="@string/datos_casa"/>
            <item android:id="@+id/VACC" android:title="@string/info_vacc"/>
            <item android:id="@+id/GIFT" android:title="@string/info_gift"/>
            <item android:id="@+id/DOC" android:title="@string/info_docs"/>
        </menu>
    </item>

</menu>
