<menu xmlns:android="http://schemas.android.com/apk/res/android" >

   	<item android:id="@+id/MENU_DESCARGA" 
        android:title="@string/download" 
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_download"></item>
   	<item android:id="@+id/MENU_CARGA" 
        android:title="@string/upload" 
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_upload"></item>
   	<item android:id="@+id/MENU_DOWN_USER" 
        android:title="@string/download_user" 
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_allfriends"></item>
   	<item android:id="@+id/MENU_DOWN_PART" 
        android:title="@string/download_par" 
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_btn_search"></item>
    <item android:id="@+id/MENU_PREFERENCES" 
        android:title="@string/preferences" 
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_menu_preferences"></item>
    <item android:id="@+id/MENU_EXIT" 
        android:title="@string/exit" 
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_lock_power_off"></item>
</menu>
