<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
            android:id="@+id/tipo_lugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dip"
            android:text="@string/tipoDoc"
            android:textSize="18sp"
            android:textStyle="bold" />
    <Spinner
            android:id="@+id/tipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dip"
            android:paddingBottom="20dip"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold" />
   <LinearLayout 
   android:orientation="horizontal"
   android:layout_height="wrap_content"
   android:layout_width="match_parent">
    <Button android:text="@string/btnIntend" android:id="@+id/btnIntend"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1" />
    <Button android:text="@string/btnSave" android:id="@+id/btnSave"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1" />
    <Button android:text="@string/btnExit" android:id="@+id/btnExit"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1" />
  </LinearLayout>
  <ImageView 
      android:layout_height="match_parent" 
      android:layout_width="match_parent" 
      android:visibility="visible"
      android:id="@+id/imageView1" />
</LinearLayout>
