<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView02"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="2dip"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:paddingTop="8dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_logo"
                android:scaleType="fitCenter"
                android:src="@drawable/redtubes" />

            <TextView
                android:id="@+id/label_red"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.0"
                android:ellipsize="end"
                android:focusable="false"
                android:gravity="center"
                android:padding="6dip"
                android:text="@string/header_red"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="2dip"
            android:paddingLeft="6dip"
            android:paddingRight="6dip"
            android:paddingTop="8dip" >

            <EditText
                android:id="@+id/codigo"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:ellipsize="end"
                android:focusable="false"
                android:hint="@string/barcode_code"
                android:singleLine="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/barcode_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/desc_barcode"
                android:src="@drawable/ic_btn_barcode" />
        </LinearLayout>

        <TextView
            android:id="@+id/label_volumen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/volumen"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/volumen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/volumen"
            android:inputType="numberDecimal"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_lugar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/lugar"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/lugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_obs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/obs"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/obs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/obs"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_ok"
            android:paddingTop="10dip"
            android:text="@string/guardar"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/finish"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_error"
            android:paddingTop="10dip"
            android:text="@string/terminar"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>