<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SelecPartZikaActivity" >

    <TextView
        android:id="@+id/label_logo"
        style="?android:textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/logo"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/selec_part"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/metodo_busqueda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:singleLine="true"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/barcode_button"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/desc_barcode"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:src="@drawable/ic_barcode" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/codigo"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:hint="@string/code"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true" />

    <ImageButton
        android:id="@+id/find_button"
        android:layout_width="wrap_content"
       	android:layout_height="match_parent"
        android:contentDescription="@string/enter_code"
        android:src="@drawable/ic_btn_search" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/participante"
        style="?android:textAppearanceLarge"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"/>

    <ImageButton
        android:id="@+id/select_button"
        android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
        android:contentDescription="@string/enter_code"
        android:src="@drawable/ic_ok" />
    </LinearLayout>
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        
    />

</LinearLayout>