<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView02"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="2dip"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:paddingTop="8dip" >

        <TextView
            android:id="@+id/label_rnd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:focusable="false"
            android:gravity="center"
            android:padding="6dip"
            android:text="@string/header_rnd"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/razon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_orazon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dip"
            android:text="@string/orazon"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/orazon"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/orazon"
            android:paddingTop="10dip"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_ok"
            android:paddingTop="10dip"
            android:text="@string/guardar"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>